--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,14 +13,14 @@ dock_split_2=3
 dock_split_3=0
 dock_hsplit_1=280
 dock_hsplit_2=231
-dock_hsplit_3=-392
+dock_hsplit_3=-227
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Character/Enemies/virus_roll/virus_roll.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Levels/", "res://Character/", "res://Character/Enemies/", "res://Character/Enemies/virus_roll/", "res://Character/Enemies/virusslime/", "res://Character/Enemies/virus/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/health_bar/healthbarProgress.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/health_bar/", "res://Levels/", "res://HUD/", "res://Character/", "res://Character/Enemies/", "res://Character/Enemies/virus_roll/", "res://Character/Enemies/virusslime/", "res://Character/Enemies/virus/")
 dock_split_1=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn", "res://Character/Enemies/virus_roll/virus_roll.tscn")
-current_scene="res://Character/Enemies/virus_roll/virus_roll.tscn"
-center_split_offset=-258
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Character/Enemies/virus_roll/virus_roll.tscn", "res://Characters/player.tscn", "res://Enemies/Virus1/virus_1.tscn", "res://Character/Enemies/virusslime/virus_3.tscn", "res://Background/map_1.tscn", "res://Background/ground.tscn")
+current_scene="res://Background/ground.tscn"
+center_split_offset=-216
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Levels/base_level.gd", "res://Levels/CheckButton.gd", "res://Enemies/Virus1/Damageable.gd", "res://Character/Enemies/virus/Damageable.gd", "res://Enemies/enemy_slime.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://UI/main_menu.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Scripts/transition.gd", "res://Enemies/Virus1/Virus1_HealthBar.gd", "res://Character/Enemies/virus/virus.gd", "res://Enemies/Virus1/virus_1.gd", "res://Enemies/virus_2.gd", "res://Enemies/virus_3.gd", "res://UI/youdied.gd"]
-selected_script="res://Character/Enemies/virus/Damageable.gd"
+open_scripts=["res://Levels/base_level.gd", "res://Levels/CheckButton.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://UI/main_menu.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Scripts/transition.gd", "res://Enemies/Virus1/Virus1_HealthBar.gd", "res://Character/Enemies/virusslime/Virus3_HealthBar.gd", "res://Character/Enemies/virus/virus.gd", "res://Enemies/Virus1/virus_1.gd", "res://Enemies/virus_2.gd", "res://Enemies/virus_3.gd", "res://UI/youdied.gd"]
+selected_script="res://Levels/base_level.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
