--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,11 +28,11 @@ dock_5="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Character/Enemies/virusslime/virus_3.tscn")
-current_scene="res://Character/Enemies/virusslime/virus_3.tscn"
+open_scenes=PackedStringArray("res://Levels/base_level.tscn")
+current_scene="res://Levels/base_level.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
