--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,7 +28,7 @@ dock_5="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn")
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn")
 current_scene="res://Levels/base_level.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Levels/base_level.gd", "res://Levels/CheckButton.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://UI/main_menu.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Scripts/transition.gd", "res://Enemies/Virus1/Virus1_HealthBar.gd", "res://Character/Enemies/virusslime/Virus3_HealthBar.gd", "res://Character/Enemies/virus/virus.gd", "res://Enemies/Virus1/virus_1.gd", "res://Enemies/virus_2.gd", "res://Enemies/virus_3.gd", "res://UI/youdied.gd"]
-selected_script="res://Enemies/virus_3.gd"
+selected_script="res://Characters/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
